--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,6 @@
 html,
 body {
     overflow-x: hidden;
-    background-color: rgb(31, 29, 29);
-    color: aliceblue;
+    /* background-color: rgb(31, 29, 29);
+    color: aliceblue; */
 }
